<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name = "detailViewModel"
            type = "com.example.myapplicationnine.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.myapplicationnine.DetailFragment">

        <TextView
            android:id="@+id/tvAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={detailViewModel.argAction}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvUid" />

        <EditText
            android:id="@+id/tvUid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={detailViewModel.argUid}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvAction"
            app:layout_constraintBottom_toBottomOf="@id/etTitle" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={detailViewModel.argTitle}"
            android:hint="@string/input_etTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvUid"
            app:layout_constraintBottom_toBottomOf="@id/etDescription" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={detailViewModel.argDescription}"
            android:hint="@string/input_etDescription"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/etTitle"
            app:layout_constraintBottom_toBottomOf="@id/etCount" />

        <EditText
            android:id="@+id/etCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={detailViewModel.argCount}"
            android:hint="@string/input_etCount"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf=" @id/etDescription"
            app:layout_constraintBottom_toBottomOf="@id/etFrequency"/>

        <EditText
            android:id="@+id/etFrequency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={detailViewModel.argFrequency}"
            android:hint="@string/frequency"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/etCount"
            app:layout_constraintBottom_toBottomOf="@id/etDate" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={detailViewModel.argDateTime}"
            android:hint="@string/datetime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/etFrequency"
            app:layout_constraintBottom_toBottomOf="@id/etDoneDates" />

        <EditText
            android:id="@+id/etDoneDates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={detailViewModel.argDoneDates}"
            android:hint="@string/datetime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/etDate"
            app:layout_constraintBottom_toBottomOf="@id/spinnerPriority" />

        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectedItemPosition="@={detailViewModel.argPriority}"
            android:entries="@array/priorities"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/etDate"
            app:layout_constraintBottom_toBottomOf="@id/rgType" />

        <RadioGroup
            android:id="@+id/rgType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/spinnerPriority"
            app:layout_constraintBottom_toBottomOf="@id/btnSave">

            <RadioButton
                android:id="@+id/rbtnTypeOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="@={detailViewModel.argType1}"
                android:onClick="@{() -> detailViewModel.chooseTypeFirst()}"
                android:text="@string/item_type_one"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/rbtnTypeTwo"
                app:layout_constraintTop_toTopOf="@id/rgType"
                app:layout_constraintBottom_toBottomOf="@id/rgType"/>

            <RadioButton
                android:id="@+id/rbtnTypeTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="@={detailViewModel.argType2}"
                android:onClick="@{() -> detailViewModel.chooseTypeSecond()}"
                android:text="@string/item_type_two"
                app:layout_constraintLeft_toLeftOf="@id/rbtnTypeOne"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/rgType"
                app:layout_constraintBottom_toBottomOf="@id/rgType"/>

        </RadioGroup>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_save"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/rgType"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>